# kwin

./: CMakeLists.txt
autotests/integration/: contexts_test.cpp  inputmethod_test.cpp  kwin_wayland_test.cpp  kwin_wayland_test.h  xwaylandserver_crash_test.cpp  xwaylandserver_restart_test.cpp
autotests/libinput/: CMakeLists.txt  mock_libinput.cpp
src/: CMakeLists.txt  composite.cpp  contexts.cpp  contexts.h  contexts_p.h  customtiling.cpp  customtiling.h  dbusinterface.cpp  debug_console.cpp  deleted.cpp  effects.cpp  effects.h  events.cpp  gestures.cpp  gestures.h  globalshortcuts.cpp  input.cpp  input.h  input_event.h  inputdevice.h  inputmethod.cpp  internalwindow.cpp  internalwindow.h  kwin.kcfg  main.cpp  main.h  main_wayland.cpp  main_x11.cpp  modifier_only_shortcuts.cpp  options.cpp  options.h  outline.cpp  outline.h  output.cpp  output.h  placementtracker.cpp  placementtracker.h  platform.cpp  platform.h  pointer_input.cpp  (+32 more)
src/colors/: colordevice.cpp  colormanager.cpp  colormanager.h  colorspace.cpp  colorspace.h
src/effects/: CMakeLists.txt
src/libkwineffects/: kwinanimationeffect.cpp  kwinanimationeffect.h  kwindeformeffectprivate.cpp  kwindeformeffectprivate_p.h  kwineffects.cpp  kwineffects.h  kwinglutils.h  kwinoffscreeneffect.cpp  kwinoffscreeneffect.h  kwinoffscreenquickview.cpp  kwinquickeffect.cpp
src/plugins/: CMakeLists.txt
src/plugins/mousebuttontokey/: CMakeLists.txt  main.cpp  mousebuttonrebindfilter.cpp  mousebuttonrebindfilter.h
src/utils/: common.h  (+1 more)
tests/: CMakeLists.txt  lockscreenallowedtest.cpp  lockscreenallowedtest.desktop
(+210 files in other folders)
